--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        background-color: salmon;
+        text-align: center;
+      }
+
+      .nama {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 50px;
+        color: white;
+      }
+
+      .nama span {
+        display: inline-block;
+        transition: 0.3s;
+        cursor: pointer;
+      }
+
+      .nama span:hover {
+        transform: scale(2) translateY(-20px);
+      }
+    </style>
   </head>
   <body>
-    <ul>
+    <!-- <ul>
       <li>Alghi</li>
       <li>Aiman</li>
       <li>Acim</li>
-    </ul>
+    </ul> -->
+
+    <h1 class="nama">Alghifari</h1>
     <script src="script.js"></script>
   </body>
 </html>
