--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -34,7 +34,7 @@
       <li>Acim</li>
     </ul> -->
 
-    <h1 class="nama">Alghifari</h1>
+    <h1 class="nama"></h1>
     <script src="script.js"></script>
   </body>
 </html>
